--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write \"{server.js,routes.js,controllers/**/*.js,services/**/*.js,utils/**/*.js}\"",
   },
   "keywords": [],
   "author": "",
